Finished Personal Website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="half-section">
             <h2 class="bio">Biography</h2>
             <p>Lifesaving web developer with expert Photoshop, HTML, and CSS3 skills. Seeking to make life easier. Developed several professional websites. Now start looking for serious web developer job in a good organization.</p>
-            <a class="link-button" href="https://www.linkedin.com/in/mathew-rodrick-42bba1a7/"> Download CV</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/mathew-rodrick-42bba1a7/"> Download CV</a>
         </div>
     </section>
 
@@ -37,10 +37,42 @@
         <div>
             <h2 id="lt-work">My Latest Work</h2>
         </div>
-        <div>
-
+        <div class="lt-div">
+            <img class="lw-image" src="images/latest-work/work-1.png" alt="">
+            <img class="lw-image" src="images/latest-work/work-2.jpg" alt="">
+            <img class="lw-image" src="images/latest-work/work-3.jpg" alt="">
         </div>
     </section>
+
+    <section>
+        <h2 class="client">What Client are say</h2>
+        <h5 class="designation">Mathew Shawon Rodrick</h5>
+        <h6 class="designation" id="des">Founder & CEO Alies</h6>
+        <p id="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget dolor<br> nec lorem tincidunt faucibus quis vitae mi. Aliquam at porta leo, vel vulputate metus."</p>
+    <div class="container">
+        <a class="email-button" target="_blank" href="programming.hero1@gmail.com"><span id="msg">Leave me a message in the</span> <span id="eml">programming.hero1@gmail.com</span></a>
+    </div>
+    </section>
+    <section class="box">
+        <h2>OFFICES</h2>
+        <div class="office">
+            <h3 class="off">Office-1</h3>
+            <p class="off-text">Street: flat # a3, road # 141, gulshan - 1, 1212<br>City: Dhaka</p>
+        </div>
+        <div class="office">
+            <h3 class="off">Office-2</h3>
+            <p class="off-text">Street: 137, tejgaon i/a, tejgaon, 1208<br>City: Dhaka</p>
+        </div>
+        <div class="office">
+            <h3 class="off">Office-3</h3>
+            <p class="off-text">Street: 5th floor, (east side), mirpur, 1218<br>City: Dhaka</p>
+        </div>
+    </section>    
+    <footer id="foot">
+        <p id="foot">
+          Programming Hero initiative. © 2020 All rights Reserved.  
+        </p>
+    </footer>
 
 </body>
 </html>
