--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <h6 class="designation" id="des">Founder & CEO Alies</h6>
         <p id="lorem">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum eget dolor<br> nec lorem tincidunt faucibus quis vitae mi. Aliquam at porta leo, vel vulputate metus."</p>
     <div class="container">
-        <a class="email-button" target="_blank" href="programming.hero1@gmail.com"><span id="msg">Leave me a message in the</span> <span id="eml">programming.hero1@gmail.com</span></a>
+        <a class="email-button" target="_blank" href="https://account.microsoft.com/profile/"><span id="msg">Leave me a message in the</span> <span id="eml">mathewrodrick94@hotmail.com</span></a>
     </div>
     </section>
     <section class="box">
