--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </section>
 
-    <section>
+    <section class="info">
         <h2 class="client">What Client are say</h2>
         <h5 class="designation">Mathew Shawon Rodrick</h5>
         <h6 class="designation" id="des">Founder & CEO Alies</h6>
